[package]
name = "nes"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = { version = "2.6.0", features = ["serde"] }
sdl2 = { version = "0.37.0", features = ["bundled", "static-link"] }
rand = "0.8.5"
serde = { version = "1.0.209", features = ["derive"] }
bincode = "1.3.3"

[dev-dependencies]
pretty_assertions = "1.4.0"
